ajax_calendar layout bug fixes

--- a/interface/themes/ajax_calendar.css
+++ b/interface/themes/ajax_calendar.css
@@ -326,3 +326,25 @@ a.status64, a.status126
 .patient_age:after{
     content:")";
 }
+.in_start
+{
+    background: transparent;
+    z-index:2;
+}
+.event_out.event_highlight, .in_start.event_highlight { 
+    font-weight: bold; 
+    border-top: 1px solid #999;
+    border-left: 1px solid #999;
+    border-right: 2px solid #666;
+    border-bottom: 2px solid #666;
+    margin: 0px;
+    background-color: yellow;
+    opacity: 1;
+    z-index: 2;
+    cursor: pointer;
+}
+
+.event_out{
+    z-index: 2;
+    background-color:#99FFFF;
+}
